# rust-sandbox

./: README.md
convert-temperature/src/: main.rs
find-average/: Cargo.toml
find-average/src/: main.rs
grrs/: Cargo.toml
grrs/src/: main.rs
grrs/tests/: cli.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml
modules/src/: config.rs  main.rs
modules/src/models/: user_model.rs
modules/src/routes/: health_route.rs  user_route.rs
quiz/: Cargo.toml  README.md
quiz/src/: main.rs
snake/: Cargo.toml  README.md
snake/src/: game.rs  snake.rs
