[package]
name = "quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "3.2.8", features = ["derive"] }
csv = "1.1"
serde = { version = "1", features = ["derive"] }